--- a/client/plainter-ui/src/app/layout/header-mobile/header-mobile.component.css
+++ b/client/plainter-ui/src/app/layout/header-mobile/header-mobile.component.css
@@ -1,5 +1,5 @@
 .header-mobile{
-    display: none;
+    background-color: #8826EB;
 }
 @media screen and (max-width: 1080px){
     .header-mobile{
